ingress-controllers/network-policies/ingress-network-policy-test1.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: test1
spec:
  podSelector:
  ingress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-test1-ingress
  namespace: test1
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: "default"
  policyTypes:
  - Ingress
