ingress-controllers/network-policies/ingress-network-policy-test2-ipblock.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: test2
spec:
  podSelector:
  ingress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-test2-ingress
  namespace: test2
spec:
  podSelector: {}
  ingress:
  - from:
    - ipBlock:
        cidr: 172.27.0.1/32
  policyTypes:
  - Ingress
